--- a/dev/scss/blocks/menu.scss
+++ b/dev/scss/blocks/menu.scss
@@ -23,6 +23,8 @@
   justify-content: space-between;
   padding: 1.2rem 1.5rem 0 1.5rem;
   z-index: 300;
+  background-color: rgba(237, 236, 236, 0.9);
+  border-radius: 0 0px 7px 7px;
 }
 
 .main-menu {
