--- a/dev/scss/blocks/footer.scss
+++ b/dev/scss/blocks/footer.scss
@@ -55,7 +55,7 @@
     }
     .logo-footer{
         width: 175px;
-        padding: 2rem 1rem 3rem 0;
+        margin: 2rem 1rem 3rem 0;
     }
     .ul-footer{
         padding: 0;
