--- a/dev/scss/blocks/menu.scss
+++ b/dev/scss/blocks/menu.scss
@@ -7,7 +7,7 @@
   background-color: var(--very-dark-blue);
   z-index: 100;
   padding: 5rem 1rem 0 1rem;
-  transition: transform 0.3s;
+  transition: transform 0.6s;
   transform: translateY(-150%);
 }
 
@@ -25,6 +25,7 @@
   z-index: 300;
   background-color: rgba(237, 236, 236, 0.9);
   border-radius: 0 0px 7px 7px;
+  transition: background-color .4s;
 }
 
 .main-menu {
@@ -86,7 +87,7 @@
   color: #000;
   font-size: 22px;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out ;
+  transition: transform 0.5s ease-in-out ;
 }
 .hamburger.activeh {
   transform: rotate(180deg);
