--- a/dev/scss/blocks/header.scss
+++ b/dev/scss/blocks/header.scss
@@ -4,6 +4,19 @@ $color: #c0b2da;
     background-color: transparent;
     font-family: var(--main-font);
     width: 100%;
+    position: fixed;
+    z-index: 200;
+    &.hactive{
+        z-index: 400; background-color: var(--very-dark-blue);
+    }
+    @media screen and(min-width: 768px){
+        height: 5rem;
+        display: flex;
+        background:rgba(237, 236, 236, 0.9);
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 1rem;
+    }
 }
 
 
@@ -13,6 +26,10 @@ $color: #c0b2da;
     justify-content: center;
     flex-direction: column;
 
+    @media screen and (min-width: 768px){
+        width: auto;
+        flex-direction: row;
+    }
 }
 
 // .hamburger{
