--- a/dev/scss/blocks/section.scss
+++ b/dev/scss/blocks/section.scss
@@ -1,6 +1,7 @@
 
 .section{
   padding-bottom: 4rem;
+  
 &-title,
 &-text{
 text-align: center;
@@ -33,8 +34,58 @@ font-weight: 400;
     border-bottom-left-radius: 150px;
     background-color: var(--soft-blue);
     z-index: -1;
+    @media screen and (min-width: 768px){
+      width: 500px;
+      top: 220px;
+      height: 380px;
+    }
+  }
+  @media screen and (min-width: 768px){
+    display: flex;
+    padding-top: 8rem;
+    padding-bottom: 7rem;
+    flex-direction: row-reverse;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    .section-item{
+      max-width: 50%;
+    }
+    .section-content{
+      margin-top: 3rem;
+      padding-right: 3rem;
+      padding-left:5rem ;
+    }
+    .section-title{
+      font-size: 40px;
+      text-align: left;
+    }
+    .section-text{
+      text-align: left;
+      padding-left: 0;
+    }
+    .buttons{
+      justify-content: start;
+      padding-left: 0;
+      & .button-blue{
+        margin-right: 1rem;
+      }
+    }
   }
 }
+
+.section-2{
+  
+  @media screen and(min-width: 768px) {
+    .tabs{
+      flex-direction: row;
+      &-item:first-child{
+        border-top: none;
+      }
+    }
+  }
+  }
+
+
 .section-3{
   padding-bottom: 3.5rem;
 }
