--- a/dev/scss/blocks/browser-card.scss
+++ b/dev/scss/blocks/browser-card.scss
@@ -1,5 +1,8 @@
 .cards-container{
+    display: flex;
     padding: 0 2.5rem;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 .browser-card{
     padding: 1.3rem 0;
@@ -10,6 +13,7 @@
    box-shadow:0px 1px 3px 3px #ebe3e3;
    border-radius: 5px;
    margin-bottom: 2rem;
+   width: 300px;
    background: radial-gradient(circle at 150px, #fff, rgb(250, 250, 250));
 
    &-title{
