--- a/dev/scss/blocks/header.scss
+++ b/dev/scss/blocks/header.scss
@@ -6,8 +6,11 @@ $color: #c0b2da;
     width: 100%;
     position: fixed;
     z-index: 200;
+    height: 4rem;
+    transition: height .5s ease-in-out;
     &.hactive{
         z-index: 400; background-color: var(--very-dark-blue);
+        height: 100vh;
     }
     @media screen and(min-width: 768px){
         height: 4rem;
