--- a/dev/scss/blocks/browser-card.scss
+++ b/dev/scss/blocks/browser-card.scss
@@ -15,6 +15,7 @@
    margin-bottom: 2rem;
    width: 300px;
    background: radial-gradient(circle at 150px, #fff, rgb(250, 250, 250));
+   height: 400px;
 
    &-title{
        margin: 0;
