--- a/dev/scss/blocks/footer.scss
+++ b/dev/scss/blocks/footer.scss
@@ -42,6 +42,16 @@
                 font-weight: 500;
                 box-shadow:0px .5px 3px 0px #3c3d54;
             }
+            
+                        @media screen and(min-width: 768px){
+                            flex-direction: row;
+                            width: 40%;
+                            .button-red{
+                                margin-left: 1rem;
+                                width:40% ;
+                            
+                            }
+                        }
         }
 
     }
