--- a/dev/scss/blocks/menu.scss
+++ b/dev/scss/blocks/menu.scss
@@ -10,6 +10,7 @@
   border-radius: 0 0px 7px 7px;
   transition: background-color .4s;
   @media screen and (min-width: 768px){
+    background-color: transparent;
   width: 30%;
     .hamburger{
       display: none;
@@ -19,7 +20,11 @@
 
 
 //NAV
-
+.nav{
+  @media screen and(min-width:768px){
+    padding-right: 4rem;
+  }
+}
 .contenedor-nav {
   width: 100%;
   min-height: 100vh;
@@ -108,6 +113,8 @@
   letter-spacing: 2px;
   font-weight: 400;
   @media screen and(min-width: 768px){
+    font-size: 20px;
+    padding: .3rem 1rem;
     width: 8rem;
     margin-top: 0;
     background-color: var(--soft-red);
