--- a/dev/scss/blocks/section.scss
+++ b/dev/scss/blocks/section.scss
@@ -87,7 +87,30 @@ font-weight: 400;
 
 
 .section-3{
-  padding-bottom: 3.5rem;
+ margin-bottom: 3.5rem;
+  @media screen and(min-width: 768px){
+    .cards-container{
+      padding-left: 8.5rem;
+      padding-right: 8.5rem;
+    }
+    .section-text{
+      text-align: center;
+      padding: 0 20rem;
+    }
+    .browser-card{
+
+    &:first-child{
+      margin-top: 1rem;
+    }
+    &:nth-child(2){
+      margin-top: 3rem;
+    }
+    &:nth-child(3){
+      margin-top: 5rem;
+    }
+  }
+  }
+
 }
 
 .section-4{
@@ -102,6 +125,12 @@ font-weight: 400;
     letter-spacing: 1px;
     padding: 1rem;
     line-height: 1.3;
+  }
+  @media screen and(min-width: 768px){
+    .section-text{
+      text-align: center;
+      padding: 0 20rem;
+    }
   }
 }
 
