--- a/dev/scss/blocks/tabs.scss
+++ b/dev/scss/blocks/tabs.scss
@@ -5,14 +5,14 @@
   align-items: center;
   justify-content: center;
   padding: 0;
-
+  
   &-item {
     border-bottom: 1px solid var(--grayish-blue-transparent);
     width: 95%;
     text-align: center;
     padding: 1rem 0;
     cursor: pointer;
-    @media screen and(min-width: 768px){
+    @media screen and(min-width: 1024px){
       width: 15%;
       &:first-child{
         border-top: none;
@@ -32,14 +32,14 @@
         background-color: var(--soft-red);
         bottom: 0;
         left: 30%;
-        @media screen and(min-width: 768px){
+        @media screen and(min-width: 1024px){
           left: 0;
           width: 100%;
         }
       }
     }
   }
-
+  
   &-content {
     position: absolute;
     left: -5000px;
@@ -47,50 +47,59 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items:center ;
+    align-items:center;
     &.active {
       position: relative;
       left: 0;
     }
     &::after {
-        content: "";
-        position: absolute;
-        height: 200px;
-        width: 300px;
-        top: 65px;
-        left: 0px;
-        display: block;
-        border-top-right-radius: 90px;
-        border-bottom-right-radius: 150px;
-        background-color: var(--soft-blue);
-        z-index: -1;
+      content: "";
+      position: absolute;
+      height: 225px;
+      width: 270px;
+      top: 65px;
+      left: 0px;
+      display: block;
+      border-top-right-radius: 90px;
+      border-bottom-right-radius: 150px;
+      background-color: var(--soft-blue);
+      z-index: -1;
+    }
+    @media screen and(min-width: 1024px){
+      flex-direction: row;
+      &::after {
+        top: 135px;
+        height: 350px;
+        width: 480px;
       }
-     @media screen and(min-width: 768px){
-       flex-direction: row;
-       &::after {
-         top: 135px;
-         height: 350px;
-         width: 480px;
-       }
-       .tab-info{
-         padding: 0 4rem;
-       }
-       .tabs-text,.tabs-title{
-         text-align: left;
-       }
-     }
+      .tab-info{
+        padding: 0 4rem;
+        
+      }
+      .tabs-text,.tabs-title{
+        text-align: left;
+      }
+    }
   }
+  
   &-text {
     text-align: center;
     padding-bottom: 1.4rem;
   }
   &-img{
-      margin-bottom: 1rem;
-      @media screen and(min-width: 768px){
+    margin-bottom: 1rem;
+    @media screen and(min-width: 1024px){
       margin-left: 5rem;
-      }
+    }
   }
   &-img-first{
     margin-bottom: 3.5rem;   
   }
+}
+
+.tab-info{
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
