--- a/dev/scss/blocks/section.scss
+++ b/dev/scss/blocks/section.scss
@@ -1,6 +1,6 @@
 
 .section{
- padding: 0 1rem 4rem 1rem;
+ padding-top:4rem;
   
 &-title,
 &-text{
@@ -19,8 +19,9 @@ font-weight: 400;
 }
 }
 .section-1 {
-  padding-top: 6rem;
+
   position: relative;
+  padding: 6rem 1rem 0 1rem;
 
   &::before {
     content: "";
@@ -34,13 +35,13 @@ font-weight: 400;
     border-bottom-left-radius: 150px;
     background-color: var(--soft-blue);
     z-index: -1;
-    @media screen and (min-width: 768px){
+    @media screen and (min-width: 1024px){
       width: 500px;
       top: 220px;
       height: 380px;
     }
   }
-  @media screen and (min-width: 768px){
+  @media screen and (min-width: 1024px){
     display: flex;
     padding-top: 8rem;
     padding-bottom: 7rem;
@@ -75,7 +76,7 @@ font-weight: 400;
 
 .section-2{
   
-  @media screen and(min-width: 768px) {
+  @media screen and(min-width: 1024px) {
     .section-text{
       text-align: center;
       padding: 0 23rem;
@@ -92,7 +93,7 @@ font-weight: 400;
 
 .section-3{
  margin-bottom: 3.5rem;
-  @media screen and(min-width: 768px){
+  @media screen and(min-width: 1024px){
     .cards-container{
       padding-left: 8.5rem;
       padding-right: 8.5rem;
@@ -130,7 +131,7 @@ font-weight: 400;
     padding: 1rem;
     line-height: 1.3;
   }
-  @media screen and(min-width: 768px){
+  @media screen and(min-width: 1024px){
     .section-text{
       text-align: center;
       padding: 0 20rem;
