--- a/dev/scss/blocks/section.scss
+++ b/dev/scss/blocks/section.scss
@@ -100,7 +100,7 @@ font-weight: 400;
     }
     .section-text{
       text-align: center;
-      padding: 0 23rem;
+      padding: 0 25%;
     }
     .browser-card{
 
@@ -134,7 +134,7 @@ font-weight: 400;
   @media screen and(min-width: 1024px){
     .section-text{
       text-align: center;
-      padding: 0 20rem;
+      padding: 0 25%;
     }
   }
 }
