--- a/dev/scss/blocks/tabs.scss
+++ b/dev/scss/blocks/tabs.scss
@@ -90,6 +90,7 @@
     margin-bottom: 1rem;
     @media screen and(min-width: 1024px){
       margin-left: 5rem;
+      max-width: 45%;
     }
   }
   &-img-first{
