--- a/dev/scss/blocks/header.scss
+++ b/dev/scss/blocks/header.scss
@@ -17,6 +17,7 @@ $color: #c0b2da;
 
         height: 4rem;
         position: sticky;
+        z-index: 600;
         display: flex;
         //ARREGLAR background
         background-color: rgba(237, 236, 236, 0.9);
