--- a/dev/scss/blocks/section.scss
+++ b/dev/scss/blocks/section.scss
@@ -95,8 +95,8 @@ font-weight: 400;
  margin-bottom: 3.5rem;
   @media screen and(min-width: 1024px){
     .cards-container{
-      padding-left: 8.5rem;
-      padding-right: 8.5rem;
+      padding-left: 11%;
+      padding-right: 11%;
     }
     .section-text{
       text-align: center;
