--- a/dev/scss/config/variables.scss
+++ b/dev/scss/config/variables.scss
@@ -8,6 +8,7 @@
   --white-soft: #ffffff33;
   --dirty-white: #f5f5f5;
   --soft-blue: hsl(231, 69%, 60%);
+  --soft-blue-hover: hsl(231, 48%, 42%);
   --soft-red: hsl(0, 94%, 66%);
   --grayish-blue: hsl(229, 8%, 60%);
   --very-dark-blue: hsla(229, 31%, 21%, 0.98);
