--- a/dev/scss/blocks/footer.scss
+++ b/dev/scss/blocks/footer.scss
@@ -125,15 +125,23 @@
        .logo-footer{
            margin: 0;
            margin-right: 2rem;
-           padding-top: .25rem;
+         
        }
        .li-footer-item{
+           color: white;
            margin-bottom: 0;
-           margin-right: 1rem;
+           margin-right: .7rem;
+           font-size: 13px;
+           cursor: pointer;
+           & .link-menu:hover{
+               color: var(--soft-blue);
+           }
        }
+
        .redes{
            justify-content: flex-end;
            margin-right: 2rem;
+           cursor: pointer;
        }
     }
 }
