--- a/dev/scss/blocks/buttons.scss
+++ b/dev/scss/blocks/buttons.scss
@@ -43,3 +43,16 @@
     padding: .8rem;
     border-radius: 5px;
 }
+.button-red{
+    width: 95%;
+    letter-spacing: 1px;
+    font-size: 16px;
+    background-color: var(--soft-red);
+    color: #fff;
+    font-weight: 500;
+    box-shadow:0px .5px 3px 0px #3c3d54;
+    transition: background-color .3s;
+    &:hover{
+        background-color: rgb(202, 78, 78);
+    } 
+}
